test-cases/final-dump/bang_expression_error.exp
Error detected during final normalisation of module(s) bang_expression_error
final-dump/bang_expression_error.wybe:4:28: function call cannot have preceding !
final-dump/bang_expression_error.wybe:4:36: function call cannot have preceding !
final-dump/bang_expression_error.wybe:10:33: function call cannot have preceding !
final-dump/bang_expression_error.wybe:10:63: function call cannot have preceding !
